--- a/src/style.css
+++ b/src/style.css
@@ -54,7 +54,9 @@ body {
   padding: 5%;
 }
 
-.button-clear:hover,.button-delete:hover,#enter-button {
+.button-clear:hover,
+.button-delete:hover,
+#enter-button {
   cursor: pointer;
 }
 
